save ui visibility issues

--- a/src/app/modules/product-card/product-card-vertical-grid-view/product-card-vertical-grid-view.component.scss
+++ b/src/app/modules/product-card/product-card-vertical-grid-view/product-card-vertical-grid-view.component.scss
@@ -9,7 +9,8 @@
     border-radius: $border-radius-8;
     padding: 10px;
     position: relative;
-    width:152px;
+    // width:152px;
+    width: 160px;
     margin:10px 0px 0px 15px;
     min-height: 315px;
     .product-card-upper {
@@ -45,7 +46,7 @@
             margin-top: 4px;
             margin-bottom: 5px;
             text-align: left;
-            font-size: $small-font;
+            font-size: $medium-font;
             color: var(--dim-gray);
         }
 
@@ -66,7 +67,7 @@
 
             .prod-selling-price {
                 margin-top: 4px;
-                font-size: 17px;
+                font-size: 20px;
                 height: 18px;
                 color: var(--onyx-black);
                 font-weight: $font-bold;
