--- a/src/app/scss/utils/colors.scss
+++ b/src/app/scss/utils/colors.scss
@@ -51,7 +51,7 @@
 }
 
 .dark-green {
-    background: #309615;
+    background: var(--slimy-green);
 }
 
 .dark-orange {
